Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52671

Building QtMultimedia for iOS fails with XCode 7.3

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.1
    • 5.6.0
    • Multimedia
    • None
    • MacOS X 10.11.4
      XCode 7.3
    • iOS/tvOS/watchOS
    • 2170a3b0fcda613daf76a337fa45cb97e0714cdf

    Description

      When building QtMultimedia for iOS I get the following errors:

      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.mm:94:9cd extras/ && ( test -e Makefile || /Users/macuser/qtbuild/build_ios5.6.0/qtbase/bin/qmake /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtquickcontrols/src/extras/extras.pro -o Makefile ) && /Applications/Xcode.app/Contents/Developer/usr/bin/make -f Makefile 
      : error: 'm_writerQueue' is unavailable
              m_writerQueue = writerQueue;
              ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:83:29: note: declaration uses __weak, but ARC is disabled
          __weak dispatch_queue_t m_writerQueue;
                                  ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.mm:96:9: error: 'm_delegateQueue' is unavailable
              m_delegateQueue = delegateQueue;
              ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:87:29: note: declaration uses __weak, but ARC is disabled
          __weak dispatch_queue_t m_delegateQueue;
                                  ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.mm:200:24: error: 'm_delegateQueue' is unavailable
              dispatch_async(m_delegateQueue, ^{
                             ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:87:29: note: declaration uses __weak, but ARC is disabled
          __weak dispatch_queue_t m_delegateQueue;
                                  ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.mm:224:20: error: 'm_delegateQueue' is unavailable
          dispatch_async(m_delegateQueue, ^{
                         ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:87:29: note: declaration uses __weak, but ARC is disabled
          __weak dispatch_queue_t m_delegateQueue;
                                  ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.mm:318:24: error: 'm_writerQueue' is unavailable
              dispatch_async(m_writerQueue, ^{
                             ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:83:29: note: declaration uses __weak, but ARC is disabled
          __weak dispatch_queue_t m_writerQueue;
                                  ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.mm:322:24: error: 'm_writerQueue' is unavailable
              dispatch_async(m_writerQueue, ^{
                             ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:83:29: note: declaration uses __weak, but ARC is disabled
          __weak dispatch_queue_t m_writerQueue;
                                  ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:83:29: error: cannot create __weak reference in file using manual reference counting
          __weak dispatch_queue_t m_writerQueue;
                                  ^
      /Users/macuser/qtbuild/qt-everywhere-opensource-src-5.6.0/qtmultimedia/src/plugins/avfoundation/camera/avfmediaassetwriter.h:87:29: error: cannot create __weak reference in file using manual reference counting
          __weak dispatch_queue_t m_delegateQueue;
      

      It seems to work if I remove the "__weak" from the declaration,
      but I don't know much about ObjectiveC, so maybe that will have side effects.

      My configuration is:

      ./configure -sdk iphoneos -xplatform macx-ios-clang -release -commercial -no-icu -confirm-license \
        -skip qt3d -skip qtserialbus -skip qtserialport -skip qtandroidextras -skip qtwebengine -skip qtactiveqt -skip qtwayland -skip qtenginio -skip qtx11extras -skip qtwinextras -skip qttools \
        -no-compile-examples -nomake tests -no-sql-mysql -nomake examples -qt-zlib -qt-libpng -qt-libjpeg -qt-freetype -qt-pcre -qt-harfbuzz  
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            lkdem Ludger Krämer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes